# usbipdcpp

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README-zh.md  README.md  conanfile.txt
.claude/skills/vcpkg-ci-debug/: SKILL.md
.github/workflows/: build-packages.yml  cmake-multi-platform.yml  release.yml
bindings/: CMakeLists.txt  device.cpp  endpoint.cpp  enums.cpp  interface.cpp  module.cpp  server.cpp  session.cpp  string_pool.cpp  virtual_device.cpp
bindings/devices/: absolute_mouse.cpp
cmake/: usbipdcppConfig.cmake.in
example/: empty_server.cpp  libusb_server.cpp
example/mock_mouse/: Mouse.cpp
examples/: CMakeLists.txt  empty_server.cpp  example_utils.h  libusb_server.cpp  termux_libusb_server.cpp
examples/absolute_mouse/: CMakeLists.txt  absolute_mouse_main.cpp
examples/advanced_mouse/: advanced_mouse_main.cpp
examples/libevdev_mouse/: CMakeLists.txt  Mouse.cpp  libevdev_mouse.cpp  libevdev_mouse.h  libevdev_mouse_main.cpp
examples/libevdev_mouse/include/: Mouse.h
examples/libusb_server/: CMakeLists.txt  libusb_server.cpp
examples/mock_cdc_acm/: CMakeLists.txt  mock_cdc_acm.cpp  mock_cdc_acm.h  mock_cdc_acm_main.cpp
examples/mock_gamepad/: CMakeLists.txt  mock_gamepad_main.cpp
examples/mock_keyboard/: CMakeLists.txt  mock_keyboard.cpp  mock_keyboard.h  mock_keyboard_main.cpp
examples/mock_mouse/: CMakeLists.txt  Mouse.cpp  mock_mouse.cpp  mock_mouse.h  mock_mouse_main.cpp
examples/mock_msc/: CMakeLists.txt  mock_msc_main.cpp
examples/mock_uvc/: CMakeLists.txt  mock_uvc_main.cpp
examples/mock_uvc_ffmpeg/: CMakeLists.txt  FfmpegSource.cpp  FfmpegSource.h  main.cpp  mock_uvc_ffmpeg_main.cpp
examples/multi_devices/: CMakeLists.txt  device_factory.cpp  device_factory.h  main.cpp  multi_devices_main.cpp  simple_device.cpp  simple_device.h
examples/multi_interface_hid/: CMakeLists.txt  multi_interface_hid_main.cpp
examples/python/: flip_left_button.py  test_absolute_mouse.py
examples/termux_libusb_server/: CMakeLists.txt  termux_libusb_server.cpp
include/: CdcAcmConstants.h  ConcurrentTransferTracker.h  Device.h  DeviceHandler.h  Endpoint.h  Export.h  HidConstants.h  HidVirtualInterfaceHandler.h  Interface.h  InterfaceHandler.h  Server.h  Session.h  SetupPacket.h  SimpleVirtualDeviceHandler.h  StringPool.h  Version.h  VirtualDeviceHandler.h  constant.h  device.h  endpoint.h  interface.h  network.h  protocol.h  type.h  usbipdcpp.h  usbipdcpp_core.h  usbipdcpp_libusb.h  usbipdcpp_virtual_device.h  utils.h
include/DeviceHandler/: DeviceHandler.h  SimpleVirtualDeviceHandler.h  TransferOperator.h  VirtualDeviceHandler.h
include/InterfaceHandler/: CdcAcmVirtualInterfaceHandler.h  HidVirtualInterfaceHandler.h  InterfaceHandler.h  VirtualInterfaceHandler.h
include/LibusbHandler/: LibusbDeviceHandler.h  LibusbServer.h  LibusbTransferOperator.h  tools.h
include/libusb_handler/: LibusbDeviceHandler.h  LibusbInterfaceHandler.h  LibusbServer.h  tools.h
include/utils/: ConcurrentTransferTracker.h  ConcurrentUnlinkMap.h  LatencyTracker.h  ObjectPool.h  ReuseMap.h  ReuseSet.h  RingBuffer.h  SmallVector.h  StringPool.h  utils.h
include/virtual_device/: CdcAcmConstants.h  CdcAcmVirtualInterfaceHandler.h  HidConstants.h  HidVirtualInterfaceHandler.h  MscConstants.h  SimpleVirtualDeviceHandler.h  UvcConstants.h  UvcVirtualInterfaceHandler.h  VirtualDeviceHandler.h  VirtualDeviceTransferOperator.h  VirtualInterfaceHandler.h
include/virtual_device/devices/: AbsoluteMouseHandler.h  AdvancedMouseHandler.h  DigitizerHandler.h  GamepadHandler.h  KeyboardHandler.h  MscBulkOnlyHandler.h  RelativeMouseHandler.h
include/virtual_device/storage_backends/: MemoryBackend.h  RawImageBackend.h  StorageBackend.h  StorageIoTransfer.h  StorageTransferOperator.h
include/virtual_device/video_sources/: ColorBarSource.h  VideoSource.h
src/: Device.cpp  DeviceHandler.cpp  HidVirtualInterfaceHandler.cpp  Interface.cpp  InterfaceHandler.cpp  Server.cpp  Session.cpp  SimpleVirtualDeviceHandler.cpp  VirtualDeviceHandler.cpp  device.cpp  interface.cpp  protocol.cpp
src/DeviceHandler/: DeviceHandler.cpp  GenericTransferOperator.cpp  SimpleVirtualDeviceHandler.cpp  VirtualDeviceHandler.cpp
src/InterfaceHandler/: CdcAcmVirtualInterfaceHandler.cpp  HidVirtualInterfaceHandler.cpp  InterfaceHandler.cpp  VirtualInterfaceHandler.cpp
src/LibusbHandler/: LibusbDeviceHandler.cpp  LibusbServer.cpp  LibusbTransferOperator.cpp  tools.cpp
src/libusb_handler/: LibusbDeviceHandler.cpp  LibusbInterfaceHandler.cpp  LibusbServer.cpp  tools.cpp
src/utils/: RingBuffer.cpp
src/virtual_device/: CdcAcmVirtualInterfaceHandler.cpp  HidVirtualInterfaceHandler.cpp  SimpleVirtualDeviceHandler.cpp  UvcVirtualInterfaceHandler.cpp  VirtualDeviceHandler.cpp  VirtualDeviceTransferOperator.cpp  VirtualInterfaceHandler.cpp
src/virtual_device/devices/: AbsoluteMouseHandler.cpp  AdvancedMouseHandler.cpp  DigitizerHandler.cpp  GamepadHandler.cpp  KeyboardHandler.cpp  MscBulkOnlyHandler.cpp  RelativeMouseHandler.cpp
src/virtual_device/storage_backends/: RawImageBackend.cpp  StorageTransferOperator.cpp
src/virtual_device/video_sources/: ColorBarSource.cpp
test/: test_network.cpp  utils.h
test/test_protocol/: test_protocol.cpp
tests/: CMakeLists.txt  test_concurrent_tracker.cpp  test_generic_transfer.cpp  test_network.cpp  test_object_pool.cpp  test_reuse_map.cpp  test_reuse_set.cpp  test_setup_packet.cpp  test_small_vector.cpp  test_stringpool.cpp  test_transfer_handle.cpp  test_usb_device.cpp  test_usbip_response.cpp  test_utils.h  utils.h
tests/test_protocol/: test_protocol.cpp  test_protocol_compatibility.cpp
