# 示例 exe 输出到构建根目录，与 DLL 同目录，避免找不到 dll
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

find_package(cxxopts CONFIG QUIET)

if (cxxopts_FOUND)
    if (USBIPDCPP_BUILD_EXAMPLE_LIBEVDEV_MOUSE)
        if (CAN_THIS_SYSTEM_SUPPORT_EVDEV)
            find_package(PkgConfig REQUIRED)
            pkg_check_modules(libevdev REQUIRED IMPORTED_TARGET libevdev)
            add_subdirectory(libevdev_mouse)
        else ()
            message(WARNING "evdev is not available in this target")
        endif ()
    endif ()

    if (USBIPDCPP_BUILD_EXAMPLE_MOCK_MOUSE)
        add_subdirectory(mock_mouse)
    endif ()
    if (USBIPDCPP_BUILD_EXAMPLE_MOCK_KEYBOARD)
        add_subdirectory(mock_keyboard)
    endif ()
    if (USBIPDCPP_BUILD_EXAMPLE_MOCK_GAMEPAD)
        add_subdirectory(mock_gamepad)
    endif ()
    if (USBIPDCPP_BUILD_EXAMPLE_MOCK_CDC_ACM)
        add_subdirectory(mock_cdc_acm)
    endif ()
    if (USBIPDCPP_BUILD_EXAMPLE_MOCK_MSC)
        add_subdirectory(mock_msc)
    endif ()
    if (USBIPDCPP_BUILD_EXAMPLE_MOCK_UVC)
        add_subdirectory(mock_uvc)
    endif ()
    if (USBIPDCPP_BUILD_EXAMPLE_MULTI_DEVICES)
        add_subdirectory(multi_devices)
    endif ()
    if (USBIPDCPP_BUILD_EXAMPLE_ABSOLUTE_MOUSE)
        add_subdirectory(absolute_mouse)
    endif ()
    if (USBIPDCPP_BUILD_EXAMPLE_MOCK_UVC_FFMPEG)
        add_subdirectory(mock_uvc_ffmpeg)
    endif ()

    if (USBIPDCPP_BUILD_LIBUSB_COMPONENTS AND USBIPDCPP_BUILD_EXAMPLE_LIBUSB_SERVER)
        add_subdirectory(libusb_server)
    endif ()
else ()
    message(WARNING "cxxopts not found, skipping all examples that need it")
endif ()

# termux 由 termux-usb 程序调用，参数固定(argc=2, argv[1]=fd)，不需要 cxxopts
if (USBIPDCPP_BUILD_LIBUSB_COMPONENTS AND USBIPDCPP_BUILD_EXAMPLE_TERMUX_LIBUSB_SERVER)
    add_subdirectory(termux_libusb_server)
endif ()
