# 示例 exe 输出到构建根目录，与 DLL 同目录，避免找不到 dll
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

find_package(cxxopts CONFIG)

if (cxxopts_FOUND)
    message(STATUS "cxxopts found — building examples")
    if (USBIPDCPP_BUILD_VIRTUAL_DEVICE AND USBIPDCPP_BUILD_EXAMPLE_LIBEVDEV_MOUSE)
        add_subdirectory(libevdev_mouse)
    endif ()

    if (USBIPDCPP_BUILD_VIRTUAL_DEVICE AND USBIPDCPP_BUILD_EXAMPLE_MOCK_MOUSE)
        add_subdirectory(mock_mouse)
    endif ()
    if (USBIPDCPP_BUILD_VIRTUAL_DEVICE AND USBIPDCPP_BUILD_EXAMPLE_MOCK_KEYBOARD)
        add_subdirectory(mock_keyboard)
    endif ()
    if (USBIPDCPP_BUILD_VIRTUAL_DEVICE AND USBIPDCPP_BUILD_EXAMPLE_MOCK_GAMEPAD)
        add_subdirectory(mock_gamepad)
    endif ()
    if (USBIPDCPP_BUILD_VIRTUAL_DEVICE AND USBIPDCPP_BUILD_EXAMPLE_MOCK_CDC_ACM)
        add_subdirectory(mock_cdc_acm)
    endif ()
    if (USBIPDCPP_BUILD_VIRTUAL_DEVICE AND USBIPDCPP_BUILD_EXAMPLE_MOCK_MSC)
        add_subdirectory(mock_msc)
    endif ()
    if (USBIPDCPP_BUILD_VIRTUAL_DEVICE AND USBIPDCPP_BUILD_EXAMPLE_MOCK_UVC)
        add_subdirectory(mock_uvc)
    endif ()
    if (USBIPDCPP_BUILD_VIRTUAL_DEVICE AND USBIPDCPP_BUILD_EXAMPLE_MULTI_DEVICES)
        add_subdirectory(multi_devices)
    endif ()
    if (USBIPDCPP_BUILD_VIRTUAL_DEVICE AND USBIPDCPP_BUILD_EXAMPLE_ABSOLUTE_MOUSE)
        add_subdirectory(absolute_mouse)
    endif ()
    if (USBIPDCPP_BUILD_VIRTUAL_DEVICE AND USBIPDCPP_BUILD_EXAMPLE_MOCK_UVC_FFMPEG)
        add_subdirectory(mock_uvc_ffmpeg)
    endif ()
    if (USBIPDCPP_BUILD_VIRTUAL_DEVICE AND USBIPDCPP_BUILD_EXAMPLE_MULTI_INTERFACE_HID)
        add_subdirectory(multi_interface_hid)
    endif ()

    if (USBIPDCPP_BUILD_LIBUSB_COMPONENTS AND USBIPDCPP_BUILD_EXAMPLE_LIBUSB_SERVER)
        add_subdirectory(libusb_server)
    endif ()
else ()
    message(WARNING "cxxopts not found, skipping all examples that need it")
endif ()

# termux 由 termux-usb 程序调用，参数固定(argc=2, argv[1]=fd)，不需要 cxxopts
if (USBIPDCPP_BUILD_LIBUSB_COMPONENTS AND USBIPDCPP_BUILD_EXAMPLE_TERMUX_LIBUSB_SERVER)
    add_subdirectory(termux_libusb_server)
endif ()

# 安装示例可执行文件（默认关闭，发布包时开启）
if(USBIPDCPP_INSTALL_EXAMPLES)
    if(TARGET mock_mouse)
        install(TARGETS mock_mouse RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
    endif()
    if(TARGET mock_keyboard)
        install(TARGETS mock_keyboard RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
    endif()
    if(TARGET mock_gamepad)
        install(TARGETS mock_gamepad RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
    endif()
    if(TARGET mock_cdc_acm)
        install(TARGETS mock_cdc_acm RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
    endif()
    if(TARGET mock_msc)
        install(TARGETS mock_msc RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
    endif()
    if(TARGET mock_uvc)
        install(TARGETS mock_uvc RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
    endif()
    if(TARGET multi_devices)
        install(TARGETS multi_devices RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
    endif()
    if(TARGET absolute_mouse)
        install(TARGETS absolute_mouse RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
    endif()
    if(TARGET mock_uvc_ffmpeg)
        install(TARGETS mock_uvc_ffmpeg RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
    endif()
    if(TARGET multi_interface_hid)
        install(TARGETS multi_interface_hid RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
    endif()
    if(TARGET libevdev_mouse)
        install(TARGETS libevdev_mouse RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
    endif()
    if(TARGET libusb_server)
        install(TARGETS libusb_server RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
    endif()
    if(TARGET termux_libusb_server)
        install(TARGETS termux_libusb_server RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
    endif()
endif()
